--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "scripts": {
-    "start": "browser-sync start --config bs-config.js"
-},
+    "start": "browser-sync start --config bs-config.js",
+    "dev": "vite"
+  },
   "devDependencies": {
     "browser-sync": "^3.0.3",
-    "phaser": "^3.86.0"
+    "phaser": "^3.86.0",
+    "vite": "^5.4.11"
   }
 }
